fix overflow to overflow-x

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 	body {
 		background: SeaShell;
 		color: black;
-		overflow: hidden
+		overflow-x: hidden
 	}
 }
 
@@ -10,7 +10,7 @@
 	body {
 		background: #000;
 		color: white;
-		overflow: hidden
+		overflow-x: hidden
 	}
 	a:link {
 		color: #00ff00;
